--- a/manifest.json
+++ b/manifest.json
@@ -1,4 +1,5 @@
 {
+  "format_version" : 1,
   "header" : {
     "version" : [ 1, 1, 5 ],
 		"description" : "\u00A79High and Dry \n\u00A76By Dokucraft TSC",
@@ -14,5 +15,16 @@
             "uuid" : "add21040-ffc9-4d86-b1e8-17649a69fbf5"
         }
     ],
-    "format_version" : 1
+	"subpacks": [
+   {
+      "folder_name": "no_random_rotation",
+      "name": "No Random Rotation",
+      "memory_tier": 1
+      },
+   {
+      "folder_name": "random_rotation",
+      "name": "Random Rotation",
+      "memory_tier": 2
+      }
+   ]
 }
