--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
   "header" : {
     "version" : [ 1, 1, 5 ],
 		"description" : "\u00A79High and Dry \n\u00A76By Dokucraft TSC",
-        "name" : "High",
+        "name" : "Dokucraft High",
 		"uuid" : "4cee5896-6af4-4c76-8ad5-d75c3dd0456a",
         "min_engine_version": [1, 16, 0]
     },
